cli/tests/default/e2e-other/snapshots/test_download_config/test_new_feature_registry_config/output.txt

Rules downloaded from https://semgrep.dev/p/ci failed to parse.
This is likely because rules have been added that use functionality introduced in later versions of semgrep.
Please upgrade to latest version of semgrep (see https://semgrep.dev/docs/upgrading/) and try again.

semgrep error: Invalid rule schema
  --> https://semgrep.dev/...:2
2 | - id: eqeq-bad
  |   ^

Expected one of `pattern`, `pattern-either`, `patterns`, `pattern-regex`, or `r2c-internal-project-depends-on` to be present.

[ERROR] invalid configuration file found (1 configs were invalid)
